# demo_iot_app_hw

./: .gitmodules  CMakeLists.txt  DemoIotApp.camkes  README.md  create_tap.sh  delete_tap.sh  flash.c  prepare_sd_card.sh  prepare_test.sh  run_demo.sh  seos_system_config.h  system_config.h
components/Admin/: Admin.camkes
components/Admin/src/: Admin.c  set_config_backend.c  set_config_backend.h
components/ChanMux/: ChanMux.c  ChanMux.camkes  ChanMux_upper_interface.camkes
components/CloudConnector/: CloudConnector.camkes  CloudConnectorInf.camkes  if_CloudConnector.camkes
components/CloudConnector/src/: CloudConnector.c  MQTTServer.c  MQTTServer.h  MQTT_client.c  MQTT_client.h  MQTT_net.c  MQTT_net.h  glue_tls_mqtt.c  glue_tls_mqtt.h  init_CloudConnector.c
components/ConfigServer/: ConfigServer.camkes
components/ConfigServer/src/: ConfigServer.c  create_config_backend.c  create_config_backend.h  init_config_backend.c  init_config_backend.h
components/LogServer/: LogServer.camkes  LogSrvInf.camkes
components/LogServer/src/: LogServer.c  custom_log_format.c  custom_log_format.h
components/NwDriver/: nic_driver.c  nic_driver.camkes
components/NwStack/: network_stack.c  network_stack.camkes
components/NwStackConfigurator/: NwStackConfigurator.c  NwStackConfigurator.camkes
components/PartitionManager/: PartitionManager.camkes
components/PartitionManager/src/: DiskData.h  PartitionManager.c  RamDisk.c  RamDisk.h
components/Sensor/: Sensor.camkes
components/Sensor/src/: SensorTemp.c
components/Ticker/: Ticker.c  Ticker.camkes
components/TimeServer/: TimeServer.camkes  TimeServerInf.camkes
components/TimeServer/include/: time_server.h
components/TimeServer/src/: main.c  time_server.c
components/TimeServer/timestamp/: timestamp.c  timestamp.h
components/TimerClient/: TimerClient.camkes  TimerClientInf.camkes
components/TimerClient/src/: Timer_Client.c
components/UART/: Uart.camkes  UartInf.camkes
components/UART/src/: UartDrv.c  qemu_uart.c  uart.h
components/common/: common.c  common.h
configuration/: cloudConnector_ServerCACert.pem  cloudConnector_SharedAccessSignature  cloudConnector_cloudDomain  config.xml  sensor_mqtt_payload  sensor_mqtt_topic
include/util/: helper_func.c  helper_func.h  loop.h  loop_defines.h
mosquitto_configuration/: mosquitto.conf
mosquitto_configuration/conf.d/: tls.conf
plat/nitrogen6sx/: plat.camkes  plat.cmake
plat/rpi3/: plat.camkes  plat.cmake
plat/rpi4/: plat.camkes  plat.cmake
plat/sabre/: plat.camkes  plat.cmake
